Bug 91516. Safeguard view traversal in nsObjectFrame so it doesn't walk out the current document. r=peterl,sr=attinasi